# Genova

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: cd.yml  ci.yml  docs.yml  performance.yml  security.yml
configs/: default.yaml  pipeline.yaml  train_large.yaml  train_mamba.yaml  train_small.yaml
data/variants/: clinvar_chr22.vcf
deploy/docker/: Dockerfile
deploy/helm/: Chart.yaml  values-production.yaml  values-staging.yaml  values.yaml
deploy/helm/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
deploy/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
docs/: EXECUTION_GUIDE.md  Genova_methods_execution.txt  METHODOLOGY.md
docs/notebooks/: 01_quickstart.ipynb  02_training.ipynb  03_variant_analysis.ipynb  04_generation.ipynb
genova/: __init__.py
genova/api/: __init__.py  batch_queue.py  grpc_server.py  inference.py  logging_middleware.py  monitoring.py  schemas.py  security.py  server.py  tracing.py  websocket.py
genova/benchmark/: __init__.py  benchmark_suite.py  comparison.py  standard_benchmarks.py  tasks.py
genova/cli/: __init__.py  main.py
genova/contrastive/: __init__.py  augmentations.py  contrastive_model.py  contrastive_trainer.py
genova/data/: __init__.py  bpe_tokenizer.py  dataloader.py  genome_dataset.py  long_sequence.py  preprocessing.py  quality_report.py  tokenizer.py
genova/evaluation/: __init__.py  bias_audit.py  chromatin.py  cross_validation.py  epi_interaction.py  genome_3d.py  metrics.py  statistical_tests.py  structural_variants.py  tf_binding.py  variant_predictor.py
genova/evolutionary/: __init__.py  conservation.py  multi_species.py  transfer_learning.py
genova/explainability/: __init__.py  attention_analysis.py  integrated_gradients.py  shap_explainer.py  visualization.py
genova/generative/: __init__.py  autoregressive.py  beam_search.py  diffusion.py  evaluation.py  guided_generation.py  infilling.py
genova/latent/: __init__.py  embedding_analyzer.py  visualization.py
genova/models/: __init__.py  embeddings.py  export.py  mamba_model.py  model_factory.py  multi_task.py  pruning.py  quantization.py  transformer.py
genova/motif/: __init__.py  motif_clustering.py  motif_discovery.py  visualization.py
genova/multiomics/: __init__.py  data_fusion.py  multiomics_model.py  ont_methylation.py
genova/perturbation/: __init__.py  causal_inference.py  sensitivity_map.py  variant_simulator.py
genova/population/: __init__.py  frequency_encoder.py  population_model.py
genova/training/: __init__.py  active_learning.py  curriculum.py  differential_privacy.py  distillation.py  distributed.py  ema.py  fsdp.py  hpo.py  scheduler.py  semi_supervised.py  train.py  trainer.py
genova/uncertainty/: __init__.py  bayesian.py  calibration.py  conformal.py  ensemble.py  mc_dropout.py
genova/utils/: __init__.py  cache.py  config.py  device.py  logging.py  model_card.py  paper_figures.py  paper_tables.py  registry.py  reproducibility.py
scripts/: download_data.sh  evaluate_model.py  generate_model_card.py  prepare_training_data.py  run_benchmarks_suite.py  run_data_quality.py  run_full_pipeline.sh  run_immediate_steps.py  run_variant_analysis.py  train_foundation_model.py  train_full_model.py  train_on_real_data.py
scripts/ci/: check_model_export.py  load_test.py  quick_load_test.py  run_benchmarks.py  run_smoke_tests.sh
tests/: conftest.py
tests/benchmark/: test_benchmark_validation.py
tests/integration/: __init__.py  test_api.py  test_batch_ef.py  test_batch_g.py  test_contrastive.py  test_generative.py  test_model_variants.py  test_perturbation.py  test_population.py  test_training_pipeline.py  test_uncertainty.py  test_variant_prediction.py
tests/truthset/: test_biological_correctness.py
tests/unit/: test_api_schemas.py  test_architecture_enhancements.py  test_augmentations.py  test_config.py  test_data_pipeline.py  test_evaluation_extended.py  test_explainability.py  test_generative.py  test_generative_extended.py  test_inference_engine.py  test_metrics.py  test_model_optimization.py  test_models.py  test_motif.py  test_multiomics.py  test_population_extended.py  test_scheduler.py  test_security.py  test_server.py  test_tokenizer.py  test_training_utils.py  test_uncertainty_extended.py  test_utils.py
