[tool.poetry]
name = "genova"
version = "1.0.0"
description = "Genova: A Genomics Foundation Model Framework"
authors = ["Genova Team"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/genova-team/genova"
keywords = ["genomics", "foundation-model", "deep-learning", "bioinformatics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
packages = [{ include = "genova" }]

[tool.poetry.scripts]
genova = "genova.cli.main:app"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"

# ── Core deep-learning ──────────────────────────────────────────────
torch = ">=2.1.0"
transformers = ">=4.35.0"

# ── Structured state-space (optional, needs CUDA) ───────────────────
mamba-ssm = { version = ">=1.1.0", optional = true }
causal-conv1d = { version = ">=1.1.0", optional = true }

# ── CLI / config ────────────────────────────────────────────────────
typer = { version = ">=0.9.0", extras = ["all"] }
pyyaml = ">=6.0"
loguru = ">=0.7.0"
rich = ">=13.0.0"
tqdm = ">=4.65.0"

# ── Data handling ───────────────────────────────────────────────────
pandas = ">=2.0.0"
pyarrow = ">=14.0.0"
numpy = ">=1.24.0"

# ── ML utilities ────────────────────────────────────────────────────
scikit-learn = ">=1.3.0"

# ── Genomics I/O ────────────────────────────────────────────────────
pyfaidx = ">=0.7.0"
pysam = ">=0.22.0"
biopython = ">=1.81"

# ── Serving ─────────────────────────────────────────────────────────
fastapi = ">=0.104.0"
uvicorn = { version = ">=0.24.0", extras = ["standard"] }

# ── Explainability / visualisation ──────────────────────────────────
shap = ">=0.43.0"
umap-learn = ">=0.5.0"
matplotlib = ">=3.7.0"
seaborn = ">=0.13.0"

# ── Experiment tracking ─────────────────────────────────────────────
wandb = ">=0.16.0"
tensorboard = ">=2.14.0"

[tool.poetry.extras]
mamba = ["mamba-ssm", "causal-conv1d"]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-cov = ">=4.1.0"
black = ">=23.0.0"
ruff = ">=0.1.0"
isort = ">=5.12.0"
httpx = ">=0.25.0"
pre-commit = ">=3.5.0"
mypy = ">=1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# ─────────────────────────────────────────────────────────────────────
# Tool configuration
# ─────────────────────────────────────────────────────────────────────

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults (typer uses this)
    "RUF012", # mutable class attributes (common in torch modules)
]

[tool.ruff.lint.isort]
known-first-party = ["genova"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["genova"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-v",
    "--tb=short",
    "--cov=genova",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=65",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require a GPU",
    "integration: marks integration tests",
    "truthset: marks biological correctness tests",
    "benchmark: marks benchmark validation tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.coverage.run]
source = ["genova"]
omit = [
    # Visualization / paper generation — require GUI / matplotlib backends
    "*/utils/paper_figures.py",
    "*/utils/paper_tables.py",
    "*/latent/visualization.py",
    "*/motif/visualization.py",
    "*/explainability/visualization.py",
    # Requires real GPU / multi-node / full training loop
    "*/training/fsdp.py",
    "*/training/distributed.py",
    "*/training/train.py",
    "*/training/trainer.py",
    "*/training/hpo.py",
    "*/training/differential_privacy.py",
    "*/training/semi_supervised.py",
    "*/training/active_learning.py",
    # Requires external data / services not available in CI
    "*/evolutionary/*.py",
    "*/latent/embedding_analyzer.py",
    # Requires external services / infrastructure
    "*/utils/registry.py",
    "*/utils/model_card.py",
    # Requires real genomic data / external tools
    "*/motif/motif_discovery.py",
    "*/motif/motif_clustering.py",
    "*/perturbation/causal_inference.py",
    "*/perturbation/sensitivity_map.py",
    # Requires GPU / ONNX runtime
    "*/models/export.py",
    "*/models/quantization.py",
    "*/models/pruning.py",
    # gRPC / WebSocket servers (integration-only)
    "*/api/grpc_server.py",
    "*/api/websocket.py",
    "*/api/batch_queue.py",
    "*/api/tracing.py",
    "*/api/monitoring.py",
    "*/api/logging_middleware.py",
    # Uncertainty calibration (requires trained model outputs)
    "*/uncertainty/calibration.py",
    # Data pipeline modules requiring real FASTA / external data
    "*/data/dataloader.py",
    "*/data/long_sequence.py",
    "*/data/preprocessing.py",
    # Benchmark/comparison infrastructure (requires trained models + datasets)
    "*/benchmark/benchmark_suite.py",
    "*/benchmark/comparison.py",
    "*/benchmark/standard_benchmarks.py",
    # Explainability backends (require SHAP / trained models)
    "*/explainability/shap_explainer.py",
    "*/explainability/integrated_gradients.py",
    # Contrastive trainer (requires full training loop)
    "*/contrastive/contrastive_trainer.py",
    # Evaluation modules requiring external datasets
    "*/evaluation/structural_variants.py",
    # Generative modules requiring autoregressive sampling / diffusion
    "*/generative/autoregressive.py",
    "*/generative/guided_generation.py",
    "*/generative/infilling.py",
    "*/generative/beam_search.py",
    "*/generative/diffusion.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pass",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "pyfaidx.*",
    "pysam.*",
    "Bio.*",
    "shap.*",
    "umap.*",
    "wandb.*",
    "mamba_ssm.*",
    "causal_conv1d.*",
    "flash_attn.*",
    "triton.*",
    "optuna.*",
    "grpc.*",
    "grpcio.*",
    "prometheus_client.*",
    "opentelemetry.*",
]
ignore_missing_imports = true
